--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<title>Mascotas</title>
-	<base href="/">	
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link rel="stylesheet" href="./assets/bootstrap.css">
+    <meta charset="utf-8">
+    <title>Pet App</title>
+    <base href="/">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="./assets/bootstrap.css">
 </head>
+
 <body>
-	<app-root>Cargando...</app-root>
+    <app-root>
+        <img src="./assets/loading_pets.gif" style="position: absolute; margin: auto" />
+    </app-root>
 </body>
+
 </html>
